# Board-Database

./: README.md
board_db/: .anjuta_sym_db.db  Makefile.in  Pqq}a  configure.ac  configure~
board_db/.anjuta/session/: anjuta.session  dock-layout.xml
board_db/Debug/: Makefile  config.h  config.status  libtool
board_db/Debug/po/: Makefile  Makefile.in  POTFILES
board_db/Debug/src/: Makefile  board_db
board_db/Debug/src/.deps/: main.Po
board_db/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
board_db/src/: Makefile.am  Makefile.in  main.c  main.c~
board_db/src/source/: Makefile.am
